<resources>
    <string name="app_name">Chat App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">PassWord</string>
    <string name="signOut">SignOut</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_an_account">Create an Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="messages">Messages</string>
    <string name="search">Search</string>
    <string name="sign_out">Sign out</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="settings">Settings</string>
    <string name="app_ver">App ver 1.0.0</string>
    <string name="sign_up">Sign up</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="type_mesage">Type mesage</string>
</resources>