<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center_horizontal"
    tools:context=".views.fragment.SignUpFragment">


    <TextView
       style="@style/viewParent.headerText"
        android:text="@string/create_an_account" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/user"
        android:layout_marginTop="20dp"
        app:civ_border_width="1dp"
        app:civ_border_color="#FF000000"
        />


    <EditText
        style="@style/inputText"
        android:id="@+id/register_name"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_baseline_face_24"
        android:inputType="textEmailAddress"
        android:hint="@string/name"
        />

    <EditText
        style="@style/inputText"
        android:id="@+id/register_email"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        />

    <EditText
        style="@style/inputText"
        android:id="@+id/register_password"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:inputType="textPassword"
        android:hint="@string/password"
        />

    <EditText
        style="@style/inputText"
        android:id="@+id/register_confirm_password"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        style="@style/buttonRegLog"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up"
        app:spinning_bar_padding="10dp"
        app:spinning_bar_width="4dp"
        app:spinning_bar_color="@color/white"
        android:id="@+id/sign_up"/>

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="14sp"
            android:textColor="@color/primary_text"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/nexa_regular"
            />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in_link"
            android:text="@string/sign_in"
            android:textSize="14sp"
            android:fontFamily="@font/nexa_regular"
            android:textColor="@color/link"/>
    </LinearLayout>

</LinearLayout>
</layout>