<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.SignInFragment"
    android:padding="30dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textStyle="bold"
        android:textColor="@color/primary_text"
        android:textSize="30sp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_continue"
        android:textColor="@color/secondary_text"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:background="@drawable/background_input"
        android:id="@+id/sign_in_email"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:textColor="@color/primary_text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:hint="@string/email"
        android:importantForAutofill="no"/>

    <EditText
        android:background="@drawable/background_input"
        android:id="@+id/sign_in_password"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawablePadding="10dp"
        android:textColor="@color/primary_text"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:hint="@string/password"
        android:importantForAutofill="no"/>

    <Button
        android:background="@drawable/background_button"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/register_login"/>


    <TextView
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:id="@+id/register_register"/>

</LinearLayout>