<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center_horizontal"
    tools:context=".views.RegisterFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:textStyle="bold"
        android:textColor="@color/primary_text"
        android:textSize="30sp"
        android:layout_marginTop="10dp"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/user"
        android:layout_marginTop="20dp"
        app:civ_border_width="1dp"
        app:civ_border_color="#FF000000"
        />


    <EditText
        android:background="@drawable/background_input"
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_baseline_face_24"
        android:textColor="@color/primary_text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:hint="@string/name"
        android:importantForAutofill="no"/>

    <EditText
        android:background="@drawable/background_input"
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:textColor="@color/primary_text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:hint="@string/email"
        android:importantForAutofill="no"/>

    <EditText
        android:background="@drawable/background_input"
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawablePadding="10dp"
        android:textColor="@color/primary_text"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:hint="@string/password"
        android:importantForAutofill="no"/>

    <EditText
        android:background="@drawable/background_input"
        android:id="@+id/register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawablePadding="10dp"
        android:textColor="@color/primary_text"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"/>

    <Button
        android:background="@drawable/background_button"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/register"/>
</LinearLayout>